# FedSense

./: .gitignore  AWS_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_PUBLIC.md  DIGITALOCEAN_DEPLOYMENT.md  DIGITALOCEAN_QUICKSTART.md  Dockerfile.backend  Dockerfile.minimal  Dockerfile.railway  Dockerfile.railway.simple  FREE_DEPLOYMENT.md  FREE_DEPLOYMENT_QUICKSTART.md  Makefile  PROJECT_SUMMARY.md  README.md  apprunner-backend.yaml  apprunner-frontend.yaml  deploy-aws.sh  deploy-digitalocean.sh  deploy-free.sh  deploy-railway.sh  docker-compose.prod.yml  production-commands.md  pyproject.toml  railway.toml  requirements.txt  test_eval.py
.do/: app.yaml
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
api/: index.py  requirements.txt
data/: README.md
docker/mlflow/: docker-compose.yml
docker/nginx/: nginx.conf
docker/triton/: README.md  config.pbtxt
fedsense/: __init__.py  client_payload.py  config.py  datasets.py  dp_utils.py  eval.py  export_onnx.py  features.py  fl_client.py  fl_server.py  model_jax.py  model_torch_twin.py  serve_fastapi.py  train_local_jax.py  utils_logging.py
frontend/: Dockerfile  README.md  start-dev.sh  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
k8s/: deployment.yaml
notebooks/: 01_explore_data.ipynb
tests/: test_datasets.py  test_features.py  test_model_jax.py
